styles/DataBox.module.css
.data-box {
  color: black;
  width: 100%;
  text-align: left;
  right: 0;
}

.data-box h1 {
  font-family: "Lato";
  margin-top: 0;
  margin-bottom: 0.5rem;
}

.data-box h2 {
  font-family: sans-serif;
}

.data-box h3,
.data-box h4 {
  font-family: "Mulish";
}

.frame {
  display: flex;
}

.client-data {
  flex: 1;
}

.last-request {
  display: flex;
}

.last-request h3 {
  margin-top: 0;
  margin-bottom: 1rem;
  text-align: left;
  font-size: 1.25rem;
}

.info-container {
  display: flex;
  gap: 1rem;
}

.personal-info {
  flex: 1;
}

.screening-info {
  margin-top: 0;
  margin-right: 3rem;
  flex-shrink: 0;
}

.table {
  width: 100%;
  border-collapse: collapse;
  margin-top: 1rem;
}

.table th,
.table td {
  border: 1px solid #ddd;
  padding: 8px;
  text-align: center;
}

.table th {
  background-color: #f2f2f2;
}

.popup {
  position: fixed;
  bottom: 100%;
  left: 0;
  background-color: #ffffff;
  border: 1px solid #ccc;
  border-radius: 10px;
  padding: 10px;
  z-index: 1;
  color: black;
}

.hit-cbas-button {
  background-color: #60a0ff;
  color: #fff;
  padding: 10px 20px;
  font-size: 1rem;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  transition: background-color 0.3s ease;
  margin: 0;
}

